WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44305
Fix failing WebGL tests in Chromium in-process-webgl port
https://bugs.webkit.org/show_bug.cgi?id=44305
Summary
Fix failing WebGL tests in Chromium in-process-webgl port
Zhenyao Mo
Reported
2010-08-19 16:33:11 PDT
Fix failing tests in Chromium in-process-webgl port, mostly it's adding "#ifdef GL_ES" around precision keywords. This is a quick fix. I'll file another bug to hook up ANGEL with in-process-webgl port.
Attachments
patch
(26.03 KB, patch)
2010-08-19 16:40 PDT
,
Zhenyao Mo
kbr
: review+
zmo
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zhenyao Mo
Comment 1
2010-08-19 16:40:39 PDT
Created
attachment 64908
[details]
patch
Zhenyao Mo
Comment 2
2010-08-19 16:44:59 PDT
Note that some tests I synced with khronos. Others I added "#ifdef GL_ES" directly because the diff is non-trivia. I'll create another patch to sync layout tests with khronos conformance tests again.
Kenneth Russell
Comment 3
2010-08-20 00:11:06 PDT
Comment on
attachment 64908
[details]
patch Looks good, assuming the Khronos tests already have these changes. One minor formatting issue. WebKit/chromium/src/WebGraphicsContext3DDefaultImpl.cpp:926 + void*pointer; void* pointer
Zhenyao Mo
Comment 4
2010-08-20 10:24:54 PDT
Committed
r65740
: <
http://trac.webkit.org/changeset/65740
>
Zhenyao Mo
Comment 5
2010-08-20 10:26:41 PDT
(In reply to
comment #3
)
> (From update of
attachment 64908
[details]
) > Looks good, assuming the Khronos tests already have these changes. One minor formatting issue. > > WebKit/chromium/src/WebGraphicsContext3DDefaultImpl.cpp:926 > + void*pointer; > void* pointer
Fixed in the landed patch. The khronos tests all have #ifdef GL_ES around precision.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug