WebKit/chromium/src/WebGraphicsContext3DDefaultImpl.cpp
@@ -922,9 +922,10 @@ DELEGATE_TO_GL_3(getVertexAttribiv, GetVertexAttribiv, unsigned long, unsigned l
 
 long WebGraphicsContext3DDefaultImpl::getVertexAttribOffset(unsigned long index, unsigned long pname)
 {
-    // FIXME: implement.
-    notImplemented();
-    return 0;
+    makeContextCurrent();
+    void* pointer;
+    glGetVertexAttribPointerv(index, pname, &pointer);
+    return reinterpret_cast<long>(pointer);
 }
 
 DELEGATE_TO_GL_2(hint, Hint, unsigned long, unsigned long)
