LayoutTests/fast/canvas/webgl/resources/fragmentShader.frag
@@ -1,4 +1,7 @@
-varying highp vec3 v_normal;
+#ifdef GL_ES
+precision highp float;
+#endif
+varying vec3 v_normal;
 
 void main()
 {
